syntax = "proto3";

package grpc;

option java_multiple_files = true;

service DataStorage {
  rpc uploadFile(stream UploadRequest) returns (FileContent);
  rpc downloadFile(DownloadRequest) returns (stream FileContent);
}

message UploadRequest {
  string fileName = 1;
  string fileKey = 2;
  bytes fileContent = 3;
  int64 seg = 4;
  int32 total_chunks = 5;
}

message DownloadRequest {
  string fileName = 1;
  string fileKey = 2;
  int32 chunkFlag = 3;
}

message FileContent {
  string fileName = 1;
  bytes fileContent = 2;
  string status = 3;
  string key = 4;
  int64 seg = 5;
}
